Installed a bunch of packages that were required for typescript

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 
 
-<script src="lib/pixi.min.js"></script>
-<script src="src/main.js"></script>
+<script src="dist/bundle.js"></script>
 
 
 </head>
